# seven_koi

./: .gitignore  CLAUDE.md  PLAN.md  README.md  comicon_submission_form.md  koi_selection.md
bonus_web/: Cargo.toml  README.md
bonus_web/src/: lib.rs
bonus_web/www/: index.html
design/: style_guide.md
expansion/seven_koi/: DECK_AND_RULES.md  README.md
math/: NOTES.md  RESULTS.md  layout_stall_sweep.py  residual_two_match_stats.py  sidon_weight_explorer.py  verify.py
math/explore_sidon_odd_restricted/: Cargo.toml  README.md
math/explore_sidon_odd_restricted/src/: main.rs
math/weight3_n6_residual_split/: Cargo.toml  README.md
math/weight3_n6_residual_split/src/: main.rs
math/weight3_no4dep/: Cargo.toml  README.md
math/weight3_no4dep/src/: main.rs
math/weight5_no4dep/: Cargo.toml  README.md
math/weight5_no4dep/src/: main.rs
rules/: RULES.md
