[package]
name = "explore_sidon_odd_restricted"
version = "0.1.0"
edition = "2021"
description = "Max strict Sidon set size in GF(2)^n odd/all/even slices (Koi math tooling)"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
